# DamnGoodSound

./: .gitignore  CMakeLists.txt  DamnGoodSound.jucer  LICENSE  README.md
Source/: CustomLookAndFeel.h  Main.cpp  Main.h  ProcessorHeader.h
Source/Processors/: SquaredShaper.h
